2003-04-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-svp-render.c (nr_svp_render): New method
	(nr_pixblock_render_svp_mask_or): New method
	(nr_pixblock_render_svl_mask_or): Renamed old one
	(nr_svl_render): Ditto

	* src/libnr/nr-svp.c (nr_svp_point_wind): Implement
	(nr_line_point_distance2): Helper
	(nr_svp_point_distance): Ditto
	(nr_svp_from_svl): New method, implemented packed format and
	renamed old one to S(orted)V(ertex)L(ist)
	(nr_svp_free): Ditto

	* src/display/nr-arena-shape.h: Port all basics to NRSVP

2003-04-27  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/knotholder.c (knot_ungrabbed_handler): Flush object here

	* src/xml/repr-util.c (sp_xml_dtoa): Take '-' into accounti if
	copying integral part

	* src/svg/svg-length.c (sp_svg_length_update): New method

	* src/sp-spiral.c (sp_spiral_update): New method

	* src/sp-star.c (sp_star_update): New method

	* src/sp-ellipse.c (sp_genericellipse_update): Use generic ::set_shape

	* src/sp-rect.c (sp_rect_update): Use generic ::set_shape

2003-04-24  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-svp-uncross.c (nr_svp_uncross_full): Concat segment start only if
	within epsilon, snap intersection point at yslice, if close

2003-04-23  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/sp-color-slider.c (sp_color_slider_paint): Use proper style painters,
	so Gdk/Gtk crash bug does not show up anymore

	* src/xml/repr-io.c (sp_repr_read_file): Substitute entities (by MentaL)
	(sp_repr_read_mem): Ditto

	* src/style.c (sp_style_merge_from_style_string): Complain only if not the end
	of the style string (thanks to MenTaL)

2003-04-22  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.c (sp_module_print_plain_begin): Magic by MenTaL

	* src/libnr/nr-svp-uncross.c (nr_svp_uncross_full): Works properly now for
	all stress-tests except zap.

2003-04-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-arena-shape.c (nr_arena_shape_update): Switch fill